# OverleafMCP

./: .gitignore  README.md  SECURITY.md  SETUP.md  codex.mcp.json  package-lock.json  package.json  tsconfig.base.json
clients/go/: README.md  client.go  go.mod  tools.go
clients/python/: README.md  pyproject.toml
clients/python/overleafmcp_py/: __init__.py  client.py  tool_names.py
contracts/: overleaf-tools.v1.json
